# loci

./: .gitignore  AGENT-SETUP.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  FIRST-SESSION.md  LICENSE  LOCI-CORE.md  PALACE-METHODOLOGY.md  PALACE-UPDATE.md  PROCESSES.md  QUARANTINE-PROTOCOL.md  RC-1.6-SCOPE.md  README.md  SETUP-GUIDE.md  TWO-TIER-SETUP.md  clear-git-locks.sh  generate-llms-full.sh  llms-full.txt  loci-landing-v3.html  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
desktop/: .gitignore  .mcp.json  Cargo.toml  QUICKSTART.md  README.md  ROADMAP-viewer-to-world.md  SCAFFOLD-COMPLETE.md  build.sh  index.html  package.json  tsconfig.json  vite.config.ts
desktop/src-leptos/: Cargo.toml  Trunk.toml  index.html
desktop/src-leptos/src/: dialog.rs  main.rs  models.rs  tauri_bindings.rs
desktop/src-leptos/src/views/: about.rs  dashboard.rs  greeter.rs  mod.rs  naming_ceremony.rs  onboarding.rs  settings.rs  setup_create.rs  setup_load.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs  token_watcher.rs
desktop/src-tauri/src/inference/: mod.rs
desktop/src-tauri/src/mcp/: mod.rs  resources.rs  server.rs  tools.rs
discoveries/: README.md  TEMPLATE.md
docs/: RELEASING.md
examples/: example-CLAUDE.md
extension/: INSTALL.md  README.md  manifest.json  package.json  tsconfig.json  vite.config.ts
features/: features.yaml
landing/: DEPLOY.md  about.html  comparison.html  deploy.sh  download.html  guide.html  humans.txt  index-old.html  index.html  llms-full.txt  llms.txt  manifesto.html  privacy.html  roadmap.html  sitemap.xml  start.html  style.css
loci-cli/: Cargo.toml  README.md
loci-cli/src/: main.rs  palace.rs  tokens.rs
loci-wal/: Cargo.toml
loci-wal/examples/: demo_seed.rs
loci-wal/src/: frame.rs  lib.rs  proof.rs  wal.rs
pipeline/: GITHUB-STRATEGY.md  ROADMAP-TRACKER.md
scripts/: check-two-tier.py  qa-deploy.sh
server/: .env.example  README.md  main.py  requirements.txt
templates/: .lociignore  CLAUDE-master.md  SOUL.md  _PALACE_CONTEXT.md  crystals-guide.md  entanglement-template.md  eval-framework.md  feature-helper.md  garden-file-template.md  garden-health-template.md  garden-template.md  git-log-incident.md  handover-template.md  local-map-template.md  memory-lifecycle.md  obsidian-mindmap-starter.md  output-primitive.md  palace-audit-process.md  peer-card-template.md  persona-template.md  retrieval-hierarchy.md  room-template.md  scheduled-task-template.md  synthesis-automation.md  (+1 more)
(+64 files in other folders)
