[package]
name = "loci-wal"
version = "0.1.0"
edition = "2021"
description = "Loci egress-receipt WAL: append-only, payload-free, hash-chained, Ed25519-provable. Public trust primitive."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = "2"
hex = "0.4"
fs2 = "0.4"
