[package]
name = "loci"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4"
# 1A — Ollama local inference
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
url = "2"
# 1B — MCP server
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tower-http = { version = "0.5", features = ["set-header"] }
tokio-util = { version = "0.7" }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

